Add asgenerators flag