@@ -13,7 +13,6 @@ packages = [
 python = "^3.10,<4.0"
 SQLAlchemy = "^1.4.39"
 temporenc = "^0.1.0"
-lz4 = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 autoreadme = "^0.2102.20"
